feat: update docker file to load certs

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ CHAT_BASE_URL=base-url-for-chatbot
 
 JUDGE_MODEL_NAME=name-of-model-for-llm-judge
 JUDGE_BASE_URL=base-url-for-llm-judge
+
+LOCAL_SSL_CERTS=./certs/*
